<resources>
    <string name="app_name">Green Strides</string>
    <string name="start_screen_title">Green Strides</string>
    <string name="start_screen_body">Learn about your carbon footprint and stride towards green living</string>
    <string name="start_screen_button_text">Get Started</string>
    <string name="import_data_screen_title">Data collection</string>
    <string name="import_data_screen_body">Import data from Google Maps</string>
    <string name="import_data_button_text">Next</string>
    <string name="collect_data_screen_title">Choose the type of car you use</string>
    <string name="collect_data_button_text">Next</string>
    <string name="set_goal_label">Set your Co2 emission goals</string>


</resources>