<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImportData"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/importDataScreenImageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo1"
        android:contentDescription="@string/app_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/importDataScreenTextView"
        android:layout_width="282dp"
        android:layout_height="73dp"
        android:layout_below="@+id/importDataScreenImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:rotationX="-4"
        android:text="@string/import_data_screen_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/importDataScreenTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/importDataScreenTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:rotationX="-4"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/import_data_screen_body"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp" />

    <Button
        android:id="@+id/importDataScreenNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:background="@color/colorPrimary"
        android:text="@string/import_data_button_text"
        android:textColor="@color/white">

    </Button>

</RelativeLayout>

